# nex-payroll

./: .dockerignore  .env.example  .gitignore  BEHAVIOR.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml
backend/: .dockerignore  .ruff.toml  Dockerfile  __init__.py  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_create_schemas.py  001_multi_tenant_foundation.py  002_create_contribution_rates.py  003_create_health_insurers.py  004_create_statutory_deadlines.py  005_create_tenants.py  006_create_audit_log.py  007_create_employees.py  008_create_contracts.py  009_create_employee_children.py  010_create_leave_entitlements.py  011_create_monthly_reports.py  012_create_users.py  013_create_leaves.py  014_create_pay_slips.py  014_create_tax_brackets.py  015_create_payrolls.py  016_create_pay_slips.py  017_create_payment_orders.py  018_create_notifications.py  019_sync_all_models.py  020_audit_fix_fk_restrict.py  021_add_annual_settlements.py  022_add_journal_entries.py  023_multi_tenant_foundation.py  024_seed_initial_data.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  database.py  security.py
backend/app/middleware/: tenant_resolver.py
backend/app/models/: __init__.py  annual_settlement.py  audit_log.py  base.py  contract.py  contribution_rate.py  employee.py  employee_child.py  health_insurer.py  journal_entry.py  leave.py  leave_entitlement.py  monthly_report.py  notification.py  pay_slip.py  payment_order.py  (+6 more)
backend/scripts/: wait_for_db.py
backend/tests/: conftest.py  test_alembic.py  test_annual_settlement.py  test_auth_service.py  test_config.py  test_conftest_isolation.py  test_database.py  test_dependencies.py  test_feat14_audit.py  test_health.py  test_journal_entry.py  test_journey_auth.py  test_journey_employee.py  test_journey_payroll.py  test_journey_tenant.py  test_migration_024.py  test_model_audit_log.py  test_model_contract.py  test_model_contribution_rate.py  test_model_employee.py  test_model_employee_child.py  test_model_health_insurer.py  test_model_leave.py  test_model_leave_entitlement.py  test_model_monthly_report.py  test_model_notification.py  test_model_pay_slip.py  test_model_payment_order.py  test_model_payroll.py  test_model_statutory_deadline.py  test_model_tax_bracket.py  test_model_tenant.py  test_model_user.py  test_models_base.py  test_rbac_and_middleware.py  test_router_audit_log.py  test_router_auth.py  test_router_contract.py  test_router_contribution_rate.py  test_router_employee.py  (+60 more)
(+220 files in other folders)
