[tool.poetry]
name = "nex-payroll"
version = "0.1.0"
description = "NEX Automatized Payroll"
authors = ["ICC s.r.o."]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {version = "^0.32.0", extras = ["standard"]}
sqlalchemy = "^2.0.36"
pg8000 = "^1.31.2"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
pwdlib = {version = "^0.2.0", extras = ["argon2"]}
cryptography = "^44.0.0"
reportlab = "^4.2.0"
lxml = "^5.3.0"
sepaxml = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
