[tool.poetry]
name = "nex-payroll"
version = "0.1.0"
description = "NEX Payroll - Payroll management system"
authors = ["ICC s.r.o."]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
gunicorn = "^23.0"
sqlalchemy = "^2.0"
pg8000 = "^1.31"
alembic = "^1.14"
pydantic-settings = "^2.7"
cryptography = "^44.0"
reportlab = "^4.2"
lxml = "^5.3"
sepaxml = "^2.6"
python-jose = {extras = ["cryptography"], version = "^3.3"}
pwdlib = {extras = ["argon2"], version = "^0.2"}
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0"
httpx = "^0.28"
ruff = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"
markers = [
    "db: test requires database connection",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources",
]
